@@ -3,6 +3,7 @@ July 2, 2008 (ntrel)
   Update MY_GEANY_API_VER now we use p_document->close().
   Update for new PLUGIN_ macro names.
   Add comment about reloading in glspi_open().
+  Rename GeanyCallbacks, geany_callbacks symbol.
 
 July 1, 2008 (ntrel)
   Begin updating for Geany 0.15 API changes.
